--- a/application/assets/css/main.css
+++ b/application/assets/css/main.css
@@ -26,7 +26,7 @@
   /* Careful, this breaks the word wherever it is without a hyphen */
   overflow-wrap: break-word;
   word-wrap: break-word;
-  scroll-behavior: smooth;
+  scroll-behavior: auto;
   /* Adds a hyphen where the word breaks */
   -webkit-hyphens: auto;
   -ms-hyphens: auto;
