--- a/application/assets/css/main.css
+++ b/application/assets/css/main.css
@@ -74,24 +74,8 @@ body {
   overflow: scroll;
 }
 
-video {
-  min-height: 100vh;
-  min-width: 100vw;
-}
-
 small {
   font-size: 1rem;
-}
-
-#app {
-  position: relative;
-  height: 100%;
-  width: 100%;
-  background: black;
-  background-image: radial-gradient(circle, #e2dddd 10%, transparent 11%);
-  background-size: 5px 5px;
-  overflow-y: scroll;
-  overflow-x: hidden;
 }
 
 #wrapper {
@@ -122,6 +106,35 @@ article img {
 
 #chat {
   padding: 40px 0px 50px 0px;
+}
+
+.row:has(#chat) #sidebar,
+.row:has(#chat) #toolbar {
+  display: block;
+}
+#sidebar {
+  height: calc(100vh - 120px);
+  background: #e2dddd;
+  margin-top: 60px;
+  margin-right: 5px;
+  display: none;
+  overflow-y: scroll;
+}
+
+#toolbar {
+  height: calc(100vh - 115px);
+  margin-top: 60px;
+  margin-right: 5px;
+  display: none;
+  text-align: left;
+  padding-left: 15px;
+  overflow-y: scroll;
+}
+
+#toolbar img {
+  display: block;
+  width: 40px;
+  cursor: pointer;
 }
 
 img[src=""] {
@@ -227,6 +240,7 @@ button.audioplayer-button img {
   margin: 0 0 25px 0 !important;
   position: relative;
   min-width: 100%;
+  background: none;
 }
 
 #addressbook button.addressbook-item img {
@@ -236,6 +250,11 @@ button.audioplayer-button img {
   border-radius: 50%;
   position: absolute;
   left: 5px;
+}
+
+#addressbook button.addressbook-item {
+  touch-action: pan-y;
+  will-change: transform;
 }
 
 #addressbook .addressbook-item-name {
@@ -306,16 +325,61 @@ button.audioplayer-button img {
   color: gray;
 }
 
-#addressbook button.addressbook-item.swipe-left {
-  transform: translateX(20%);
+#addressbook button.addressbook-item.left-right {
+  transform: translateX(-5%);
 }
 
-#addressbook button.addressbook-item.swipe-right {
-  transform: translateX(-20%);
+#addressbook button.addressbook-item.swipe-left .last-conversation-message {
+  display: none;
+}
+
+#addressbook button.addressbook-item.swipe-left .last-conversation-date {
+  display: none;
+}
+
+.action-buttons {
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
+
+  flex-shrink: 0;
+  transform: scaleX(0);
+  transform-origin: left;
+  transition: transform 0.3s ease;
+  height: 60px;
+  width: fit-content;
+  margin: -20px 0 0 30px;
+}
+
+button.addressbook-item.swipe-left .action-buttons {
+  transform: scaleX(1);
+  min-width: 150px;
+  height: 40px;
+}
+
+.action-buttons span {
+  width: 50px;
+  height: 50px;
+
+  position: relative;
+}
+
+.action-buttons img {
+  display: block;
+  width: 20px;
+  height: 20px;
+  flex-shrink: 0;
+  position: relative;
 }
 
 #addressbook button.addressbook-item:last-child {
   margin-bottom: 0px;
+}
+
+#sidebar .addressbook-box {
+  margin: 0vh 0 0 0;
+  padding: 20 0 60px 0;
+  min-width: 100%;
 }
 
 a.button-style {
@@ -529,28 +593,6 @@ div#intro img {
 
 canvas {
   min-width: 100%;
-}
-
-@keyframes up-and-down {
-  10% {
-    height: 30%;
-  }
-
-  30% {
-    height: 100%;
-  }
-
-  60% {
-    height: 50%;
-  }
-
-  80% {
-    height: 75%;
-  }
-
-  100% {
-    height: 60%;
-  }
 }
 
 #KaiOSAd {
@@ -1075,6 +1117,20 @@ div#message-input input {
   z-index: 2;
 }
 
+#start #git {
+  width: 40px;
+  height: auto;
+  position: fixed;
+  left: 20px;
+  top: 20px;
+  z-index: 2;
+}
+
+#start #git img {
+  width: 40px;
+  height: auto;
+}
+
 #start kbd#version {
   border: 2px solid rgb(17, 2, 5);
   box-shadow: 8px 8px rgb(46, 96, 233);
@@ -1120,7 +1176,13 @@ div#message-input input {
   padding: 0px 0 0 0;
   min-height: 100vh;
   max-height: 100vh;
-  outline: 10px solid rgb(174, 173, 179);
+
+  position: relative;
+  height: 100%;
+  width: 100%;
+  overflow-y: scroll;
+  overflow-x: hidden;
+  background: rgba(255, 196, 205, 0.2) !important;
 }
 
 article {
@@ -1141,6 +1203,7 @@ article img {
   max-width: 100%;
   margin: 0 0 5px 0;
   padding: 0px 10px 0 10px;
+  background: none;
 }
 
 #chat article:hover {
@@ -1174,16 +1237,15 @@ span.user-offline {
 }
 
 @media screen and (min-width: 360px) and (max-width: 1000px) {
+  #chat #start {
+    display: none;
+  }
+
   #app {
     overflow-y: scroll;
     overflow-x: hidden;
     padding: 20px 0 0 0;
-
-    background-image: radial-gradient(circle, #e2dddd 10%, transparent 11%);
-    background-size: 5px 5px;
-
-    outline: 0px solid black;
-    box-shadow: 0px 0px lightblue;
+    background: none !important;
   }
 
   article {
@@ -1202,6 +1264,10 @@ span.user-offline {
     position: relative;
     overflow-y: scroll;
     overflow-x: hidden;
+  }
+
+  #start {
+    background: white;
   }
 
   #start #local-by-design {
@@ -1291,9 +1357,29 @@ span.user-offline {
   .only-desktop {
     display: none !important;
   }
+
+  #toolbar {
+    display: none !important;
+  }
+
+  #sidebar {
+    display: none !important;
+  }
 }
 
 @media screen and (max-width: 340px) {
+  #chat #start {
+    display: none;
+  }
+
+  #toolbar {
+    display: none !important;
+  }
+
+  #sidebar {
+    display: none !important;
+  }
+
   .only-desktop {
     display: none !important;
   }
@@ -1375,6 +1461,7 @@ span.user-offline {
   #start {
     padding: 10px 10px 10px 10px;
     overflow: hidden;
+    background: white;
   }
 
   #start-text {
